# Predicting-Stellar-Class

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda_and_ baseline_model.ipynb  01_eda_and_baseline_model.ipynb  02_model_selection_stacking_and_optimization.ipynb  eda.ipynb
src/stellar_classification/: DE_postprocessing.py  config.py  model_builder.py  predict.py  preprocessing.py  train.py
tests/: test_de_postprocessing.py  test_preprocessing.py
