[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-classification"
version = "0.1.0"
description = "Machine learning workflow for Kaggle stellar object classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost",
    "joblib",
    "lightgbm",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "optuna",
    "pytabkit",
    "seaborn",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
